tests/types_first_keyMirror/types_first_keyMirror.exp
Error ------------------------------------------------------------------------------------------------- keyMirror.js:7:9

Cannot assign `key` to `ret[key]` because an index signature declaring the expected key / value type is missing in
object type [1]. [prop-missing]

   keyMirror.js:7:9
   7|     ret[key] = key; // error: no indexed type
              ^^^

References:
   keyMirror.js:2:14
   2|   const ret: $ObjMapi<T, <K>(K) => K> = {};
                   ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:27:2

Cannot cast `literal.foo` to empty because string literal `foo` [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:27:2
   27| (literal.foo: empty); // error, 'foo' </: empty
        ^^^^^^^^^^^

References:
   literal.js:3:30
    3| module.exports = keyMirror({ 'foo': null });
                                    ^^^^^ [1]
   test.js:27:15
   27| (literal.foo: empty); // error, 'foo' </: empty
                     ^^^^^ [2]



Found 2 errors
